<resources>
    <string name="app_name">Creatives</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotpassword1">Forgot Password</string>
    <string name="instructions">We only need your regestered Email ID to send your reset instructions</string>
    <string name="update">Update</string>
    <string name="appName">CREATIVES</string>
    <string name="forgotpassword">Forgot your password?</string>
    <string name="signin">Sign In</string>
    <string name="accountcreation">Don\'t Have an account?</string>
    <string name="todo">TODO</string>
    <string name="discover">Discover</string>
    <string name="poetry">Poetry</string>
    <string name="music">Music</string>
    <string name="satire">Satire</string>
    <string name="literature1">Literature</string>
    <string name="photography">Photography</string>
    <string name="finearts">Fine Arts</string>
    <string name="drawing">Drawing</string>
    <string name="drama">Drama</string>
    <string name="handicrafts">Handicrafts</string>
    <string name="design">Design</string>
    <string name="theatre">Theatre</string>
    <string name="technology">Technology</string>
    <string name="culinaryskills">Culinary Skills</string>
    <string name="miscellanous">Miscellanous</string>
    <string name="take_picture">Take picture</string>
    <string name="action_settings">Settings</string>
    <string name="preview_description">Image and Video preview will appear here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_record_video">Record Video</string>
    <string name="profile">Profile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="camera">Camera</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main_frame">MainFrame</string>

</resources>
